# dipolar_averages

./: .gitignore  AverageUnitTest.py  CITATION.cff  DipoleAsymmetricCluster.ipynb  DipoleAvgCluster.ipynb  DipoleTest.ipynb  DipoleTestRandom.ipynb  LICENSE  OrientationsTest.ipynb  README.md  RotMatTest.ipynb  TensorReorientTest.py  clusterH.cif  dipolar_average_PH2.py  setup.cfg  vanVleckCalculator.py
.pylint.d/: vanVleckCalculator1.stats
Examples/: CONGRSrelaxed_geomopt-out.cif  TRIAMT01_geomopt-out.cif
Experimental/: M2_integrator.py  README.md  Spec-gaussian_fit_low_T.py  fitutils_P3.py
Experimental/Diamantane/: di_m30.csv  di_spectra_3.csv
dipolar_averages/: vanVleckCalculator.py
tests/: AverageUnitTest.py
