[metadata]
name=dipolar_averages
version=0.1.0
author=Paul Hodgkinson, Simone Sturniolo
description=A script to compute and average the Van Vleck second moments in molecular crystals, including the effects of rotational motion.
url=https://github.com/CCP-NC/dipolar_averages
long_description=file: README.md
long_description_content_type=text/markdown
keywords=crystallography, molecular crystals, dipolar averaging, Van Vleck, second moment
license=MIT


[options]
packages=find:
install_requires=
    soprano>=0.8.13

[options.entry_points]
console_scripts=
    vanVleckCalculator=dipolar_averages.vanVleckCalculator:cli


